# Retriflow

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  docker-compose.services.yml  findings.md  progress.md  requirements.txt  task_plan.md
backend/: pyproject.toml
backend/data/uploads/: c0a34491b28f40aba97236e1515c8ddf-debug-upload.docx
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  router.py
backend/src/api/routes/: __init__.py  admin.py  auth.py  chat.py  ingestion.py  knowledge.py  session.py
backend/src/core/: __init__.py  config.py  state.py
backend/src/domain/: __init__.py  answer_postprocessor.py  auth.py  chat.py  document_parser.py  document_structure.py  embeddings.py  ingestion.py  intent_classifier.py  knowledge.py  knowledge_route.py  llm.py  memory.py  query_rewrite.py  reranker.py  retrieval.py  retrieval_channels.py  retrieval_postprocessors.py  session.py  streaming.py  vector_store.py  workflow.py  workflow_adapter.py
backend/src/domain/mcp/: __init__.py  client.py  executors.py  models.py  parameter_extractor.py  registry.py  service.py
backend/src/infra/: __init__.py  distributed_lock.py
backend/src/infra/document_parser/: __init__.py  caption_enrichment.py  normalizer.py  service.py  tika_client.py
backend/src/infra/embeddings/: __init__.py  service.py
backend/src/infra/llm/: __init__.py  (+3 more)
backend/src/modules/: __init__.py
backend/src/schemas/: __init__.py  admin.py  auth.py  chat.py  document_structure.py  knowledge.py  session.py
backend/src/tests/: test_retriflow_web_structure.py
(+208 files in other folders)
