[project]
name = "retriflow-backend"
version = "0.1.0"
description = "RetriFlow Python backend foundation."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "langchain>=1.3.4,<2.0.0",
    "langchain-core>=1.4.0,<2.0.0",
    "langchain-text-splitters>=1.1.2,<2.0.0",
    "langgraph>=1.2.4,<2.0.0",
    "langsmith>=0.8.8,<1.0.0",
    "numpy>=2.4.6,<3.0.0",
    "pgvector>=0.4.1,<1.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "psycopg[binary]>=3.2.12,<4.0.0",
    "python-multipart>=0.0.30,<1.0.0",
    "uvicorn>=0.48.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
